<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCyan"
    tools:context="com.example.projetandroidtsp.Controller.CreerProfilActivity">

    <TextView
        android:id="@+id/titre_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorCyan"
        android:background="@color/colorBleu"
        android:text="@string/text_creer_profil"/>

    <TextView
        android:id="@+id/nom_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorBleu"
        android:text="@string/nom_profil"/>
    <EditText
        android:id="@+id/rep_nom_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint1_creer_profil"/>

    <TextView
        android:id="@+id/prenom_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorBleu"
        android:text="@string/prenom_profil"/>
    <EditText
        android:id="@+id/rep_prenom_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint2_creer_profil"/>

    <TextView
        android:id="@+id/age_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorBleu"
        android:text="@string/age_profil"/>
    <EditText
        android:id="@+id/rep_age_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/hint3_creer_profil"/>

    <TextView
        android:id="@+id/pdp_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/colorBleu"
        android:text="@string/avatar_profil"/>

    <ImageView
        android:id="@+id/rep_pdp_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_creer_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViolet"
        android:textColor="@color/colorCerise"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/bouton_creer_profil"/>

</LinearLayout>